doc(swagger): update

--- a/Writerside/topics/Матрица-трассабилити.md
+++ b/Writerside/topics/Матрица-трассабилити.md
@@ -3,7 +3,7 @@
 | Функция/Система                       | API | Admin | Client |
 |---------------------------------------|-----|-------|--------| 
 | **ПОЛЬЗОВАТЕЛЬ**                      | --- | ---   | ---    |
-| Регистрация пользователя              | ❌   | ❌     | ❌      |
+| Регистрация пользователя              | ✅   | ---   | ✅      |
 | Авторизация пользователя              | ✅   | ✅     | ✅      |
 | Профиль                               | ✅   | ✅     | ✅      |
 | **ВАКАНСИЯ**                          | --- | ---   | ---    |
@@ -11,7 +11,7 @@
 | Отображение вакансии                  | ✅   | ✅     | ✅      |
 | Редактирование вакансии               | ✅   | ✅     | ---    |
 | Публикация вакансии                   | ✅   | ✅     | ---    |
-| Фильтры вакансий                      | ❌   | ❌     | ✅      |
+| Фильтры вакансий                      | ✅   | ✅     | ✅      |
 | Интеграция с Хабр Карьера             | ❌   | ❌     | ❌      |
 | Интеграция с HH                       | ❌   | ❌     | ❌      |
 | Интеграция с Reksoft                  | ❌   | ❌     | ❌      |
@@ -37,15 +37,15 @@
 | Редактирование заявки                 | ❌   | ❌     | ❌      |
 | Процессинг по заявке                  | ❌   | ❌     | ❌      |
 | **УВЕДОМЛЕНИЯ**                       | --- | ---   | ---    |
-| SMTP                                  |  ❌   |   ❌    |   ❌     |
+| SMTP                                  |  ✅   | ✅     |   ✅     |
 | Шаблоны писем                         | ❌   | ❌     | ❌      |
-| Системные уведомления                 | --- |   ❌    |   ✅     |
+| Системные уведомления                 | --- | ✅     |   ✅     |
 | **ПЛАНИРОВАНИЕ**                      | --- | ---   | ---    |
-| Google календарь                      | ❌   | ❌     | ❌      |
-| Соискатель выбирает слот              | ❌   | ❌     | ❌      |
-| Рекрутер изменяет слот                | ❌   | ✅     | ❌      |
-| Рекрутер приглашает на следуюший этап | ❌   | ❌     | ❌      |
-| Подтверждение слота                   | ❌   | ❌     | ❌      |
+| Календарь                             | ✅   | ✅     | ✅      |
+| Соискатель выбирает слот              | ✅   | ✅     | ✅      |
+| Рекрутер изменяет слот                | ✅   | ✅     | ✅      |
+| Рекрутер приглашает на следуюший этап | ✅   | ✅     | ✅      |
+| Подтверждение слота                   | ✅   | ✅     | ✅      |
 | **КОММУНИКАЦИЯ**                      | --- | ---   | ---    |
 | Google Meat (ссылка на комнату)       | ❌   | ❌     | ❌      |
 | Пользователь выбирает формат звонка   | ❌   | ❌     | ❌      |
@@ -54,7 +54,7 @@
 | Подборка вакансий по скилам           | ❌   | ❌     | ❌      |
 | **НОВОСТИ**                           | --- | ---   | ---    |
 | Создание новости                      | ❌   | ❌     | ❌      |
-| Отображение новости                   | ❌   | ❌     | ❌      |
+| Отображение новости                   | ❌   | ❌     | ✅      |
 | Редактирование новости                | ❌   | ❌     | ❌      |
 | Интеграция с новостными системами     | ❌   | ❌     | ❌      |
 | **ФИЧИ**                              | --- | ---   | ---    |
